src/main/java/generated/malek/TupulParser.java
// Generated from /home/malek/IdeaProjects/TupulCompiler3/src/main/java/malek/Tupul.g4 by ANTLR 4.9.3
package generated.malek;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TupulParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, INTEGER=23, FLOAT=24, 
		DOUBLE=25, PLUS_EQUALS=26, MINUS_EQUALS=27, DOUBLE_EQUALS_LIST=28, EQUALS_LIT=29, 
		RETURN_LIT=30, SEMICOLON=31, LEFT_PAREN=32, RIGHT_PAREN=33, LEFT_CURLY=34, 
		RIGHT_CURLY=35, LEFT_SQUARE=36, RIGHT_SQUARE=37, LEFT_ANGLE=38, RIGHT_ANGLE=39, 
		ADD_OP=40, MULTI_OP=41, DIV_OP=42, SUB_OP=43, SINGLE_OR=44, SINGLE_AND=45, 
		HASHTAG=46, POINTER=47, COMMA=48, DOUBLE_OR=49, DOUBLE_AND=50, THIS_KEYWORD=51, 
		SUPERSET_KEYWORD=52, SUPER_KEYWORD=53, INT_TYPE=54, FLOAT_TYPE=55, DOUBLE_TYPE=56, 
		CHAR_TYPE=57, VOID_TYPE=58, BOOL_TYPE=59, STRING_TYPE=60, NULL_TYPE=61, 
		FALSE_KEYWORD=62, TRUE_KEYWORD=63, UNION_KEYWORD=64, INSTANCEOF_KEYWORD=65, 
		SUBSET_KEYWORD=66, STRICT_SUBSET_KEYWORD=67, TYPE=68, INTERFACE=69, EXTENDS=70, 
		OVERRIDE=71, IMPLEMENT=72, IMPORT=73, AS=74, FROM=75, PUBLIC=76, PRIVATE=77, 
		CHAR=78, STRING=79, WHITESPACE=80, FILE_IDENTIFIER=81, IDENTIFIER=82;
	public static final int
		RULE_file = 0, RULE_fileImport = 1, RULE_fromImport = 2, RULE_fileOrNormalID = 3, 
		RULE_interfaceDeclaration = 4, RULE_interfaceExtensions = 5, RULE_interfaceExtensionName = 6, 
		RULE_interfaceCodeBlock = 7, RULE_interfaceFunctionDeclaration = 8, RULE_interfaceAbstractFuncDec = 9, 
		RULE_typeDeclaration = 10, RULE_typeCodeBlock = 11, RULE_typeFunctionDeclaration = 12, 
		RULE_universalFunctionPost = 13, RULE_functionWithinFunctionDec = 14, 
		RULE_universalFunctionModifiers = 15, RULE_typeWithVoid = 16, RULE_functionDecArguments = 17, 
		RULE_functionCallArguments = 18, RULE_universalPostIdentifierFuncDec = 19, 
		RULE_functionCall = 20, RULE_functionTagOperation = 21, RULE_functionTagAppend = 22, 
		RULE_functionTagRemove = 23, RULE_functionTagEquals = 24, RULE_functionTagNotEquals = 25, 
		RULE_tagID = 26, RULE_functionCodeBlock = 27, RULE_superCall = 28, RULE_whileLoop = 29, 
		RULE_forLoop = 30, RULE_specialForLoop = 31, RULE_chainedIfStatement = 32, 
		RULE_ifStatement = 33, RULE_elseStatement = 34, RULE_elseIfStatement = 35, 
		RULE_conditional = 36, RULE_type = 37, RULE_finalValue = 38, RULE_variableInstance = 39, 
		RULE_intermediateValue = 40, RULE_variableDeclaration = 41, RULE_singleVarDec = 42, 
		RULE_multiVarDec = 43, RULE_singleVarAssignment = 44, RULE_multiVarAssignment = 45, 
		RULE_variableSwap = 46, RULE_variableIncrement = 47, RULE_variableDecrement = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "fileImport", "fromImport", "fileOrNormalID", "interfaceDeclaration", 
			"interfaceExtensions", "interfaceExtensionName", "interfaceCodeBlock", 
			"interfaceFunctionDeclaration", "interfaceAbstractFuncDec", "typeDeclaration", 
			"typeCodeBlock", "typeFunctionDeclaration", "universalFunctionPost", 
			"functionWithinFunctionDec", "universalFunctionModifiers", "typeWithVoid", 
			"functionDecArguments", "functionCallArguments", "universalPostIdentifierFuncDec", 
			"functionCall", "functionTagOperation", "functionTagAppend", "functionTagRemove", 
			"functionTagEquals", "functionTagNotEquals", "tagID", "functionCodeBlock", 
			"superCall", "whileLoop", "forLoop", "specialForLoop", "chainedIfStatement", 
			"ifStatement", "elseStatement", "elseIfStatement", "conditional", "type", 
			"finalValue", "variableInstance", "intermediateValue", "variableDeclaration", 
			"singleVarDec", "multiVarDec", "singleVarAssignment", "multiVarAssignment", 
			"variableSwap", "variableIncrement", "variableDecrement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'::'", "'static'", "'fluid'", "'const'", "'fixed'", "'dirty'", 
			"'tidy'", "'pure'", "'.'", "'!='", "'while'", "'for'", "':'", "'if'", 
			"'else'", "'else if'", "'<='", "'>='", "'%'", "'<->'", "'++'", "'--'", 
			null, null, null, "'+='", "'-='", "'=='", "'='", "'return'", "';'", "'('", 
			"')'", "'{'", "'}'", "'['", "']'", "'<'", "'>'", "'+'", "'*'", "'/'", 
			"'-'", "'|'", "'&'", "'#'", "'@'", "','", "'||'", "'&&'", "'this'", "'superset'", 
			"'super'", "'int'", "'float'", "'double'", "'char'", "'void'", "'bool'", 
			"'string'", "'null'", "'false'", "'true'", "'union'", "'instanceof'", 
			"'subset'", "'strictsubset'", "'type'", "'interface'", "'extends'", "'override'", 
			"'implement'", "'import'", "'as'", "'from'", "'public'", "'private'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "INTEGER", 
			"FLOAT", "DOUBLE", "PLUS_EQUALS", "MINUS_EQUALS", "DOUBLE_EQUALS_LIST", 
			"EQUALS_LIT", "RETURN_LIT", "SEMICOLON", "LEFT_PAREN", "RIGHT_PAREN", 
			"LEFT_CURLY", "RIGHT_CURLY", "LEFT_SQUARE", "RIGHT_SQUARE", "LEFT_ANGLE", 
			"RIGHT_ANGLE", "ADD_OP", "MULTI_OP", "DIV_OP", "SUB_OP", "SINGLE_OR", 
			"SINGLE_AND", "HASHTAG", "POINTER", "COMMA", "DOUBLE_OR", "DOUBLE_AND", 
			"THIS_KEYWORD", "SUPERSET_KEYWORD", "SUPER_KEYWORD", "INT_TYPE", "FLOAT_TYPE", 
			"DOUBLE_TYPE", "CHAR_TYPE", "VOID_TYPE", "BOOL_TYPE", "STRING_TYPE", 
			"NULL_TYPE", "FALSE_KEYWORD", "TRUE_KEYWORD", "UNION_KEYWORD", "INSTANCEOF_KEYWORD", 
			"SUBSET_KEYWORD", "STRICT_SUBSET_KEYWORD", "TYPE", "INTERFACE", "EXTENDS", 
			"OVERRIDE", "IMPLEMENT", "IMPORT", "AS", "FROM", "PUBLIC", "PRIVATE", 
			"CHAR", "STRING", "WHITESPACE", "FILE_IDENTIFIER", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tupul.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TupulParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public TypeDeclarationContext typeDeclaration() {
			return getRuleContext(TypeDeclarationContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public List<FromImportContext> fromImport() {
			return getRuleContexts(FromImportContext.class);
		}
		public FromImportContext fromImport(int i) {
			return getRuleContext(FromImportContext.class,i);
		}
		public List<FileImportContext> fileImport() {
			return getRuleContexts(FileImportContext.class);
		}
		public FileImportContext fileImport(int i) {
			return getRuleContext(FileImportContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TupulVisitor ) return ((TupulVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FROM) {
				{
				{
				setState(98);
				fromImport();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(104);
				fileImport();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				{
				setState(110);
				typeDeclaration();
				}
				break;
			case INTERFACE:
				{
				setState(111);
				interfaceDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileImportContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(TupulParser.IMPORT, 0); }
		public List<TerminalNode> FILE_IDENTIFIER() { return getTokens(TupulParser.FILE_IDENTIFIER); }
		public TerminalNode FILE_IDENTIFIER(int i) {
			return getToken(TupulParser.FILE_IDENTIFIER, i);
		}
		public TerminalNode AS() { return getToken(TupulParser.AS, 0); }
		public TerminalNode SEMICOLON() { return getToken(TupulParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TupulParser.IDENTIFIER, 0); }
		public FileImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileImport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).enterFileImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).exitFileImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TupulVisitor ) return ((TupulVisitor<? extends T>)visitor).visitFileImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileImportContext fileImport() throws RecognitionException {
		FileImportContext _localctx = new FileImportContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_fileImport);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(IMPORT);
			setState(115);
			match(FILE_IDENTIFIER);
			setState(116);
			match(AS);
			setState(117);
			_la = _input.LA(1);
			if ( !(_la==FILE_IDENTIFIER || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(118);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromImportContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(TupulParser.FROM, 0); }
		public TerminalNode FILE_IDENTIFIER() { return getToken(TupulParser.FILE_IDENTIFIER, 0); }
		public TerminalNode LEFT_CURLY() { return getToken(TupulParser.LEFT_CURLY, 0); }
		public TerminalNode RIGHT_CURLY() { return getToken(TupulParser.RIGHT_CURLY, 0); }
		public List<FileImportContext> fileImport() {
			return getRuleContexts(FileImportContext.class);
		}
		public FileImportContext fileImport(int i) {
			return getRuleContext(FileImportContext.class,i);
		}
		public FromImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromImport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).enterFromImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).exitFromImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TupulVisitor ) return ((TupulVisitor<? extends T>)visitor).visitFromImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FromImportContext fromImport() throws RecognitionException {
		FromImportContext _localctx = new FromImportContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fromImport);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(FROM);
			setState(121);
			match(FILE_IDENTIFIER);
			setState(122);
			match(LEFT_CURLY);
			setState(124); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(123);
				fileImport();
				}
				}
				setState(126); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			setState(128);
			match(RIGHT_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileOrNormalIDContext extends ParserRuleContext {
		public TerminalNode FILE_IDENTIFIER() { return getToken(TupulParser.FILE_IDENTIFIER, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TupulParser.IDENTIFIER, 0); }
		public FileOrNormalIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileOrNormalID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).enterFileOrNormalID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).exitFileOrNormalID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TupulVisitor ) return ((TupulVisitor<? extends T>)visitor).visitFileOrNormalID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileOrNormalIDContext fileOrNormalID() throws RecognitionException {
		FileOrNormalIDContext _localctx = new FileOrNormalIDContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fileOrNormalID);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_la = _input.LA(1);
			if ( !(_la==FILE_IDENTIFIER || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfaceDeclarationContext extends ParserRuleContext {
		public TerminalNode INTERFACE() { return getToken(TupulParser.INTERFACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TupulParser.IDENTIFIER, 0); }
		public InterfaceCodeBlockContext interfaceCodeBlock() {
			return getRuleContext(InterfaceCodeBlockContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(TupulParser.EXTENDS, 0); }
		public InterfaceExtensionsContext interfaceExtensions() {
			return getRuleContext(InterfaceExtensionsContext.class,0);
		}
		public InterfaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).enterInterfaceDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).exitInterfaceDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TupulVisitor ) return ((TupulVisitor<? extends T>)visitor).visitInterfaceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceDeclarationContext interfaceDeclaration() throws RecognitionException {
		InterfaceDeclarationContext _localctx = new InterfaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_interfaceDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(INTERFACE);
			setState(133);
			match(IDENTIFIER);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(134);
				match(EXTENDS);
				setState(135);
				interfaceExtensions();
				}
			}

			setState(138);
			interfaceCodeBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfaceExtensionsContext extends ParserRuleContext {
		public FileOrNormalIDContext fileOrNormalID() {
			return getRuleContext(FileOrNormalIDContext.class,0);
		}
		public List<InterfaceExtensionNameContext> interfaceExtensionName() {
			return getRuleContexts(InterfaceExtensionNameContext.class);
		}
		public InterfaceExtensionNameContext interfaceExtensionName(int i) {
			return getRuleContext(InterfaceExtensionNameContext.class,i);
		}
		public InterfaceExtensionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceExtensions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).enterInterfaceExtensions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).exitInterfaceExtensions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TupulVisitor ) return ((TupulVisitor<? extends T>)visitor).visitInterfaceExtensions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceExtensionsContext interfaceExtensions() throws RecognitionException {
		InterfaceExtensionsContext _localctx = new InterfaceExtensionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_interfaceExtensions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			fileOrNormalID();
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(141);
				interfaceExtensionName();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfaceExtensionNameContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(TupulParser.COMMA, 0); }
		public FileOrNormalIDContext fileOrNormalID() {
			return getRuleContext(FileOrNormalIDContext.class,0);
		}
		public InterfaceExtensionNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceExtensionName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).enterInterfaceExtensionName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TupulListener ) ((TupulListener)listener).exitInterfaceExtensionName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TupulVisitor ) return ((TupulVisitor<? extends T>)visitor).visitInterfaceExtensionName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceExtensionNameContext interfaceExtensionName() throws RecognitionException {
		InterfaceExtensionNameContext _localctx = new InterfaceExtensionNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_interfaceExtensionName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(COMMA);
			setState(148);
			fileOrNormalID();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
